--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -11,7 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 0 
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 19
           
       - name: Install dependencies
         run: yarn
