--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Miguel Jardinez",
   "private": true,
   "engines": {
-    "node": "18.13.0"
+    "node": "18.x"
   },
   "license": "MIT",
   "scripts": {
