--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,16 @@
 {
-  "github": {
-    "enabled": false,
-    "silent": true
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/main.ts",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/main.ts",
+      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
+    }
+  ]
 }
