--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -1,15 +1,15 @@
 name: deploy-to-production
 
 on:
-  push:
+  pull_request:
     branches:
       - master
-      
+
 jobs:
-  deploy:
-    name: Deploy
+  test_lint:
+    name: type check and linting
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v2
         with:
@@ -17,28 +17,63 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
-          
+          cache: npm
+          node-version: 16.19.0
+
+      - name: Type check
+        run: yarn type-check
+
+      - name: linting
+        run: yarn lint
+
+  test_code:
+    needs: test_lint
+    name: Testing CI
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v3
+        with:
+          cache: npm
+          node-version: 16.19.0
+
       - name: Install dependencies
         run: yarn
-        
-      - name: Test and coverage
-        run: yarn test:cov
-        
-        
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
 
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          
-      - name: Vercel Action
-        uses: amondnet/vercel-action@v20.0.0
+      - name: test:ci
+        run: yarn test:ci
+
+
+
+  code_coverage:
+    needs: test_code
+    name: Testing CI
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
         with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          github-comment: false
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-args: '--prod'
-            
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v3
+        with:
+          cache: npm
+          node-version: 16.19.0
+
+      - name: Install dependencies
+        run: yarn
+
+      - name: Get Code coverage
+        run: yarn test:cov
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage/clover.xml
+          fail_ci_if_error: true
+          verbose: true
