--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -20,6 +20,9 @@ jobs:
           cache: npm
           node-version: 16.19.0
 
+      - name: install dependencies
+        run: yarn install
+
       - name: Type check
         run: yarn type-check
 
@@ -41,13 +44,11 @@ jobs:
           cache: npm
           node-version: 16.19.0
 
-      - name: Install dependencies
-        run: yarn
+      - name: install dependencies
+        run: yarn install
 
       - name: test:ci
         run: yarn test:ci
-
-
 
   code_coverage:
     needs: test_code
