--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           cache: npm
-          node-version: 16.19.0
+          node-version: 19.x
 
       - name: install dependencies
         run: yarn install
@@ -42,7 +42,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           cache: npm
-          node-version: 16.19.0
+          node-version: 19.x
 
       - name: install dependencies
         run: yarn install
@@ -63,7 +63,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           cache: npm
-          node-version: 16.19.0
+          node-version: 19.x
 
       - name: Install dependencies
         run: yarn
