--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test_lint:
-    name: type check and linting
+    name: Type Check And Linting
     runs-on: ubuntu-latest
 
     steps:
@@ -52,7 +52,7 @@ jobs:
 
   code_coverage:
     needs: test_code
-    name: Testing CI
+    name: Test Coverage
     runs-on: ubuntu-latest
 
     steps:
