fix: update actions

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=8432
-DATABASE_ULR=postgresql://postgres:5Wx5QtHVaVPt5sqx4HOl@containers-us-west-78.railway.app:6263/railway
+DATABASE_URL=postgresql://postgres:azvrOazw1Sr7yS4TZtYp@containers-us-west-42.railway.app:7443/railway
 API_VERSION=v1
 API_JWT_SECRET=hJ<E7BOzi]JtY25*x'-7L"f5kv1A<kYaCcOn2({Q,]P!qn!b?,x:wGJE+P5(P$L
 MAP_BOX_URL=https://api.mapbox.com
