--- a/.github/workflows/deploy-to-staging.yml
+++ b/.github/workflows/deploy-to-staging.yml
@@ -1,9 +1,9 @@
-name: testing-pull-request
+name: deploy-to-staging
 
 on:
   pull_request:
     branches:
-      - master
+      - develop
 
 jobs:
   test_lint:
@@ -31,7 +31,7 @@ jobs:
 
   test_code:
     needs: test_lint
-    name: Testing CI and coverage
+    name: Testing CI
     runs-on: ubuntu-latest
 
     steps:
@@ -50,6 +50,23 @@ jobs:
       - name: test:ci
         run: yarn test:ci
 
+  code_coverage:
+    name: Test Coverage
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v3
+        with:
+          cache: npm
+          node-version: 19.x
+
+      - name: install dependencies
+        run: yarn install
+
       - name: Get Code coverage
         run: yarn test:cov
 
@@ -60,3 +77,29 @@ jobs:
           files: ./coverage/clover.xml
           fail_ci_if_error: true
           verbose: true
+
+  deploy_to_staging:
+    needs: test_lint
+    name: Deploy to staging
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v3
+        with:
+          cache: npm
+          node-version: 19.x
+
+      - name: install dependencies
+        run: yarn install --production
+
+      - name: Install Railway
+        run: npm i -g @railway/cli
+
+      - name: Deploy
+        run: railway up
+        env:
+          RAILWAY_TOKEN: ${{ secrets.DEPLOY_STAGING_GITHUB }}
