--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -51,6 +51,7 @@ jobs:
         run: yarn test:ci
 
   code_coverage:
+    needs: test_lint
     name: Test Coverage
     runs-on: ubuntu-latest
 
@@ -79,7 +80,7 @@ jobs:
           verbose: true
 
   deploy_to_staging:
-    needs: test_lint
+    needs: code_coverage
     name: Deploy to staging
     runs-on: ubuntu-latest
 
