--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -51,7 +51,7 @@ jobs:
         run: yarn test:ci
 
   code_coverage:
-    needs: test_lint
+    needs: test_code
     name: Test Coverage
     runs-on: ubuntu-latest
 
