feat: add testing files

--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
       "jestGlobalMocks.ts",
       ".module.ts",
       ".mock.ts",
+      "entity.ts",
       "main.ts"
     ],
     "coverageDirectory": "../coverage",
