--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint:fix": "eslint --fix"
   },
   "dependencies": {
+    "@mapbox/search-js-core": "^1.0.0-beta.19",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
@@ -39,7 +40,6 @@
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/typeorm": "^9.0.1",
     "argon2": "^0.30.3",
-    "axios": "^1.3.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
