feat: add models to swagger

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,10 @@
     "noFallthroughCasesInSwitch": false,
     "paths": {
       "@features/*" : ["features/*"],
-      "@configuration/*" : ["features/*"],
+      "@configuration/*" : ["configuration/*"],
       "@guards/*" : ["guards/*"],
       "@utils/*" : ["utils/*"],
+      "@core/*" : ["core/*"],
       "@app/*" : ["src/*"],
     }
   }
