--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint:fix": "eslint --fix"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.556.0",
     "@mapbox/search-js-core": "^1.0.0-beta.19",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^9.0.0",
@@ -39,11 +40,16 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/typeorm": "^9.0.1",
+    "amazon-cognito-identity-js": "^6.3.12",
     "argon2": "^0.30.3",
+    "aws-sdk": "^2.1603.0",
     "axios": "^1.6.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
+    "geojson": "^0.5.0",
+    "jwks-rsa": "^3.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
