feat: dentist services controller created

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ MAP_BOX_TOKEN=MAP_BOX_TOKEN
 AWS_USER_POOL_ID=AWS_USER_POOL_ID
 AWS_CLIENT_ID=AWS_CLIENT_ID
 AWS_CLIENT_SECRET=AWS_CLIENT_SECRET
+SEND_GRID_API_KEY=SEND_GRID_API_KEY
