feat: working schedule added to flow

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.11",
     "geojson": "^0.5.0",
     "jwks-rsa": "^3.1.0",
     "passport": "^0.6.0",
